@@ -1,0 +1,3 @@
+if mods[ "quality" ] then
+	require( "prototypes.recycling-updates" )
+end
