@@ -4,5 +4,5 @@
 	"title": "Q's Intermediate Advancements Mod",
 	"author": "Q",
 	"factorio_version": "2.0",
-	"dependencies": ["base >= 2.0.0", "! space-age"]
+	"dependencies": ["base >= 2.0.0", "? quality", "! space-age"]
 }
