@@ -6,7 +6,7 @@ IntermediateAdvancements=Gradually unlock better ways to craft familiar intermed
 
 [recipe-name]
 q__direct=__1__ (directly)
-q__bulk-solid-fuel=Bulk solid fuel from both light & heavy oil
+q__bulk-solid-fuel=Bulk solid fuel from both light & heavy oils
 q__bulk-plastic-bar=Bulk plastic bar
 q__bulk-sulfur=Bulk sulfur
 q__bulk-battery=Bulk battery
